<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView android:id="@+id/search_warning"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@android:drawable/title_bar"
              android:textSize="17sp"
              android:visibility="gone"
              android:textColor="?android:textColorPrimary" />
    <Button android:id="@+id/btnGetTranslations" android:text="@string/menu_get_translations" 
    	android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="gone"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal">

    <ImageView
        android:id="@+id/searchSubmit"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:src="@drawable/ic_ab_search"
        android:text="" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/search_hint"
        android:inputType="textPersonName"
        android:text="" />

  </LinearLayout>

  <TextView
      android:id="@+id/search_area"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@android:drawable/title_bar"
      android:text="@string/search_key"
      android:textColor="?android:textColorPrimary"
      android:textSize="17sp" />

  <ListView
            android:id="@+id/results_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
</LinearLayout>
